#744: Do not use 'selectByContainsVisibleText'
It's more strict that current matching, but some code cleaning done